// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 10.638297872340425%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_large__smeadc4"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_large__smeadc4"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_large__smeadc4"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_large__smeadc4"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_large__smeadc4"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 10.638297872340425%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 10.638297872340425%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_small__smeadc6"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_small__smeadc6"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_small__smeadc6"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_small__smeadc6"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_small__smeadc6"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 10.638297872340425%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_xsmall__smeadc7"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_xsmall__smeadc7"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_xsmall__smeadc7"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_xsmall__smeadc7"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_xsmall__smeadc7"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionSmallStrong__1yhcak8r style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 10.638297872340425%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 22.340425531914892%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 100%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-1"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with hovering legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 100%;"
          >
            <div
              class="styles__1u0cyic5"
            >
              <div
                class="styles__1u0cyic5"
                tabindex="0"
              >
                <div
                  class="styles__smeadc2 styles_size_medium__smeadc5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                    style="--whiteSpace__1eu8od81: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-1"
        >
          <span
            class="styles__smeadcb styles_child_0__smeadcc"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Hello
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <label
            class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            label
          </label>
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            label information
          </span>
        </div>
        <div
          class="classname styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 2%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with legend outside 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 2%;"
          >
            <div
              class="styles__1u0cyic5"
            >
              <div
                class="styles__1u0cyic5"
                tabindex="0"
              >
                <div
                  class="styles__smeadc2 styles_size_medium__smeadc5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                    style="--whiteSpace__1eu8od81: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-3"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-4"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-5"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-1"
        >
          <span
            class="styles__smeadcb styles_child_0__smeadcc"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Hello
          </span>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-2"
        >
          <span
            class="styles__smeadcb styles_child_1__smeadcd"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          />
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-3"
        >
          <span
            class="styles__smeadcb styles_child_2__smeadce"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Encore
          </span>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-4"
        >
          <span
            class="styles__smeadcb styles_child_3__smeadcf"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Next
          </span>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
          data-testid="legend-5"
        >
          <span
            class="styles__smeadcb styles_child_4__smeadcg"
          />
          <span
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Bye bye
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
      >
        <label
          class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        />
        <div
          class="styles__smeadc9"
        >
          <div
            class="styles__smeadc1"
            style="--smeadc0: 2%;"
          >
            <div
              class="styles__1u0cyic5"
              tabindex="0"
            >
              <div
                class="styles__smeadc2 styles_size_medium__smeadc5"
                data-testid="content-1"
              >
                <span
                  class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-2"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-3"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-4"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__smeadc1"
            style="--smeadc0: 4.2%;"
          >
            <div
              class="styles__smeadc2 styles_size_medium__smeadc5"
              data-testid="content-5"
            >
              <span
                class="styles__smeadc8 style__1yhcak80 style_prominence_stronger__1yhcak86 style_sentiment_neutral__1yhcak8b style_variant_captionStrong__1yhcak8t style_undefined_compound_2__1yhcak81c style_undefined_compound_66__1yhcak834"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
